[tool.poetry]
name = "fz-openqa"
version = "0.0.1"
description = "Medical Open Domain Question Answering"
authors = ["Valentin Liévin <valentin.lievin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.10.2"
datasets = "^1.18.3"
transformers = "^4.16.2"
hydra-core = "^1.1.1"
pytorch-lightning = "^1.5.10"
torchmetrics = "^0.7.2"
elasticsearch = "~7"
faiss-cpu = "1.6.5"
wandb = "^0.12.10"
rich = "^11.2.0"
dill = "^0.3.4"
einops = "^0.4.0"
jsondiff = "^1.3.1"
singledispatchmethod = "^1.0"
spacy = "^3.0"
scispacy = "^0.4.0"
gdown = "^4.2.1"
sklearn = "^0.0"
hydra-colorlog = "^1.1.0"
pytorch-lamb = "^1.0.0"
unicode = "^2.8"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
parameterized = "^0.8.1"
hypothesis = "^6.36.2"

[tool.poetry.scripts]
fzqa = "fz_openqa.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \sandbox*.py
  | \.github
)/
'''
