[tool.poetry]
name = "fz-openqa"
version = "0.0.1"
description = "Medical Open Domain Question Answering"
authors = ["Valentin Liévin <valentin.lievin@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
hydra-core = "^1.1.1"
torchmetrics = "^0.7.2"
wandb = "^0.12.10"
einops = "^0.4.0"
gdown = "^4.2.1"
sklearn = "^0.0"
hydra-colorlog = "^1.1.0"
pytorch-lamb = "^1.0.0"
unicode = "^2.8"
nltk = "^3.7"
sentencepiece = "^0.1.96"
warp-pipes = {git="https://github.com/vlievin/warp-pipes.git", branch="dev/fz-openqa"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
parameterized = "^0.8.1"
hypothesis = "^6.36.2"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
wikipedia = "^1.4.0"
pre-commit = "^2.19.0"

[tool.poetry.scripts]
fzqa = "fz_openqa.cli:main"

[build-system]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \sandbox*.py
  | \.github
)/
'''
